index.html heroku test change

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruby on Rails: Welcome aboard</title>
+    <title>Whak A Yak</title>
     <style type="text/css" media="screen">
       body {
         margin: 0;
@@ -204,7 +204,7 @@
       <div id="content">
         <div id="header">
           <h1>Welcome aboard</h1>
-          <h2>You&rsquo;re riding Ruby on Rails!</h2>
+          <h2>Working the Yak First Application</h2>
         </div>
 
         <div id="about">
